# opencv-playground

./: CMakeLists.txt  LICENSE  README.md
include/opencv_playground/algorithms/: algorithms.hpp
include/opencv_playground/utils/: commons.hpp
src/: color_reduction.cpp  tests.cpp
src/basics/: basic_filters.cpp  color_reduction.cpp  edge_detection.cpp
src/classes/: mog.cpp
src/segmentation/: bg_substraction.cpp
src/utils/: common.cpp
src/utils/algorithms/: segmentation.cpp
